--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,19 +17,9 @@
             <li class="dropdown">              
               <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="themes">Pages <span class="caret"></span></a>
               <ul class="dropdown-menu" aria-labelledby="themes">
-                
-                <!-- <li><a tabindex="-1" href="../default/">Default</a></li>                
-                <li><a tabindex="-1" href="../amelia/">Amelia</a></li>
-                <li><a tabindex="-1" href="../cerulean/">Cerulean</a></li>
-                <li><a tabindex="-1" href="../cosmo/">Cosmo</a></li>
-                <li><a tabindex="-1" href="../cyborg/">Cyborg</a></li>
-                <li><a tabindex="-1" href="../flatly/">Flatly</a></li>
-                <li><a tabindex="-1" href="../journal/">Journal</a></li>
-                <li><a tabindex="-1" href="../readable/">Readable</a></li>
-                <li><a tabindex="-1" href="../simplex/">Simplex</a></li>
-                <li><a tabindex="-1" href="../slate/">Slate</a></li>
-                <li><a tabindex="-1" href="../spacelab/">Spacelab</a></li>
-                <li><a tabindex="-1" href="../united/">United</a></li> -->
+              <% @pages.each do |page| %>                          
+                <li><a tabindex="-1" href="/page/<%=page.url%>"><%=page.title%></a></li>
+              <% end %>               
               </ul>
             </li>            
             <li>
