--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,8 +1,21 @@
 <% provide(:title, @page.title) %>
-<div class="page-header">
-    <div class="row">
-        <div class="col-lg-12">
-            <h1 id="buttons"><%=@page.title%></h1>
+
+<div class="bs-docs-section">
+        <div class="page-header">
+          <div class="row">
+            <div class="col-lg-12">
+             <h1><%=@page.title%></h1>
+            </div>
+          </div>
         </div>
+
+      </div>
+
+ <div class="row">      
+        <div class="bs-example">
+              <div class="jumbotron">                
+                <p><%=@page.content%></p> 
+                <p><a class="btn btn-primary btn-lg">Learn more</a></p>
+              </div>
+            </div>
     </div>
-</div>
