--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<div class="page-header">
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 id="buttons">Test</h1>
+        </div>
+    </div>
+</div>
