Finish user sign up

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,9 +17,11 @@
   <body>
   	<div class="container">
   	<%= render 'layouts/header' %>
-    <%= yield %>
+    <%= yield %>    
+    <%= render 'layouts/footer' %>
     <%= debug @page %>
     </div>
+
   </body>
   
 </html>
