--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -38,7 +38,18 @@
           </ul>
 
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="http://builtwithbootstrap.com/" target="_blank">Built With Rails, Backboke.js and Bootstrap </a></li>            
+             <li class="dropdown">              
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="themes">Account<span class="caret"></span></a>
+              <ul class="dropdown-menu" aria-labelledby="themes">
+                 
+                           
+                <li><%= link_to "Profile", current_user %></li>
+                <li><%= link_to "Settings", '#' %></li>
+                <li class="divider"></li>
+                <li><%= link_to "Sign out", signout_path, method: "delete" %></li>
+                          
+              </ul>
+            </li>           
           </ul>
 
         </div>
