--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -38,15 +38,19 @@
           </ul>
 
           <ul class="nav navbar-nav navbar-right">
-             <li class="dropdown">              
-              <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="themes">Account<span class="caret"></span></a>
-              <ul class="dropdown-menu" aria-labelledby="themes">
-                 
+             <li class="dropdown">    
+               <% if signed_in? %>
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="themes">Account<span class="caret"></span></a>
+                <ul class="dropdown-menu" aria-labelledby="themes">                 
                            
                 <li><%= link_to "Profile", current_user %></li>
                 <li><%= link_to "Settings", '#' %></li>
                 <li class="divider"></li>
                 <li><%= link_to "Sign out", signout_path, method: "delete" %></li>
+               <% else %>
+                  <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="themes">Create an account<span class="caret"></span></a>
+               <% end %>
+             
                           
               </ul>
             </li>           
