--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -44,11 +44,11 @@
                 <ul class="dropdown-menu" aria-labelledby="themes">                 
                            
                 <li><%= link_to "Profile", current_user %></li>
-                <li><%= link_to "Settings", '#' %></li>
+                <li><%= link_to "Settings", edit_user_path(current_user) %></li>
                 <li class="divider"></li>
                 <li><%= link_to "Sign out", signout_path, method: "delete" %></li>
-               <% else %>
-                  <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="themes">Create an account<span class="caret"></span></a>
+               <% else %>                  
+                       <%= link_to "Create an account", signup_path, { :class=>("create_account")} %>
                <% end %>
              
                           
